# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

cc_test(
    name = "hello",
    srcs = ["hello.cc"],
)

cc_test(
    name = "c_test",
    srcs = ["c_test.c"],
)

# Exercises llvm-ar (cpp_link_static_library action) via ar_files.
cc_library(
    name = "add",
    srcs = ["add.cc"],
    hdrs = ["add.h"],
)

cc_test(
    name = "static_lib_test",
    srcs = ["static_lib_test.cc"],
    deps = [":add"],
)


cc_binary(
    name = "asan_check",
    srcs = ["asan_check.cc"],
    copts = ["-fsanitize=address"],
    linkopts = ["-fsanitize=address"],
)

sh_test(
    name = "asan_test",
    srcs = ["asan_test.sh"],
    args = ["$(location :asan_check)"],
    data = [":asan_check"],
)

cc_binary(
    name = "ubsan_check",
    srcs = ["ubsan_check.cc"],
    copts = ["-fsanitize=undefined"],
    linkopts = ["-fsanitize=undefined"],
)

cc_binary(
    name = "shared_lib.so",
    srcs = ["shared_lib.cc"],
    linkshared = True,
)

sh_test(
    name = "ubsan_test",
    srcs = ["ubsan_test.sh"],
    args = ["$(location :ubsan_check)"],
    data = [":ubsan_check"],
)
