# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "toolchains_chromium_test",
    version = "0.0.0",
)

bazel_dep(name = "toolchains_chromium", version = "0.0.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "toolchains_chromium",
    path = "..",
)

chromium = use_extension("@toolchains_chromium//:extensions.bzl", "chromium")
chromium.toolchain()
use_repo(chromium, "chromium_toolchain")

register_toolchains("@chromium_toolchain//:all")
